overflow issues caused by aos resolved

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -30,7 +30,7 @@ body {
 }
 
 .grad-overlay {
-  background: radial-gradient(circle,rgba(0, 0, 0, 0.911) 74%, rgb(2, 2, 2) 100%);
+  background: radial-gradient(circle,rgba(0, 0, 0, 0.822) 74%, rgb(2, 2, 2) 100%);
 }
 
 @keyframes gradient {
